--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,18 @@
 [project]
 name = "qms-datawarehouse"
 version = "0.1.0"
-description = "Add your description here"
+description = "QMS Data Warehouse Sync Service"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = []
+
+[tool.ruff]
+line-length = 120
+target-version = "py312"
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
+ignore = ["E402"]
+
+[tool.pytest.ini_options]
+asyncio_mode = "auto"
