--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,24 @@
 # Web Server & Framework
-fastapi
-granian
-uvicorn
+fastapi==0.128.0
+granian==2.6.0
+uvicorn==0.40.0
+pydantic==2.12.5
+python-dotenv==1.2.1
 
 # Database Drivers
-motor
-pymongo
-sqlalchemy
-psycopg2-binary
+motor==3.7.1
+pymongo==4.15.5
+sqlalchemy==2.0.45
+psycopg2-binary==2.9.11
+redis==7.1.0
 
 # Data Processing
-pandas
-numpy
+pandas==2.3.3
+numpy==2.4.0
 
-# Testing
-pytest
-pytest-asyncio
-testcontainers
+# Testing & Quality
+pytest==9.0.2
+pytest-asyncio==1.3.0
+testcontainers==4.13.3
+httpx==0.28.1
+ruff==0.14.10
