feat: Add Dockerfile for FastAPI ETL engine with uvicorn setup

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,44 +1,59 @@
 services:
-  # Mock MongoDB Source 1
-  mongo_source_a:
-    image: mongo:latest
-    container_name: mongo_a
-    ports:
-      - "27017:27017"
-    environment:
-      MONGO_INITDB_DATABASE: source_db
-
-  # Mock MongoDB Source 2
-  mongo_source_b:
-    image: mongo:latest
-    container_name: mongo_b
-    ports:
-      - "27018:27017"
-    environment:
-      MONGO_INITDB_DATABASE: source_db
-
   # Central Data Warehouse (Postgres)
   warehouse:
     image: postgres:latest
     container_name: analytics_warehouse
     ports:
-      - "5432:5432"
+      - "5430:5432" # Host Port : Container Port
     environment:
       POSTGRES_USER: admin
-      POSTGRES_PASSWORD: pass
+      POSTGRES_PASSWORD: supersecretpassword
       POSTGRES_DB: analytics
+    volumes:
+      - warehouse_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U admin -d analytics"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
-  # Your FastAPI ETL Engine
+  # Redis for Task Queue & Caching
+  redis:
+    image: redis:alpine
+    container_name: redis_prod
+    ports:
+      - "6370:6379"
+    volumes:
+      - redis_data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 5s
+      timeout: 3s
+      retries: 5
+
+  # FastAPI ETL Engine
   etl_engine:
     build: .
     container_name: fastapi_etl
     ports:
-      - "8000:8000"
+      - "8007:8000"
     depends_on:
-      - mongo_source_a
-      - mongo_source_b
-      - warehouse
+      warehouse:
+        condition: service_healthy
+      redis:
+        condition: service_healthy
     environment:
-      - MONGO_A_URI=mongodb://mongo_source_a:27017/source_db
-      - MONGO_B_URI=mongodb://mongo_source_b:27017/source_db
-      - WAREHOUSE_URL=postgresql://admin:pass@warehouse:5432/analytics
+      - WAREHOUSE_URL=postgresql://admin:supersecretpassword@warehouse:5430/analytics
+      - REDIS_URL=redis://redis:6370/0
+      # Valid JSON string for multiple sources
+      - MONGO_SOURCES='{"mesob_arada": "mongodb://root:root.password@172.16.26.12:27027/queuemanagementsystem?authSource=admin", "mesob_bole": "mongodb://root:root.password@172.16.26.22:27017/queuemanagementsystem?authSource=admin"}'
+      - API_KEY=prod-secret-key
+      - SYNC_INTERVAL_MINUTES=60
+      # Matching the variable name in src/config.py
+      - SYNC_COLLECTIONS=ticket,users, queue
+      - DEBUG=False
+
+# Define named volumes for persistence
+volumes:
+  warehouse_data:
+  redis_data:
