--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,58 @@
-# Web Server & Framework
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.0
+apscheduler==3.11.2
+attrs==25.4.0
+certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.1
+dnspython==2.8.0
+docker==7.1.0
 fastapi==0.128.0
+frozenlist==1.8.0
 granian==2.6.0
-uvicorn==0.40.0
-pydantic==2.12.5
-python-dotenv==1.2.1
-
-# Database Drivers
+greenlet==3.3.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
+ijson==3.4.0.post0
+iniconfig==2.3.0
 motor==3.7.1
-pymongo==4.15.5
-sqlalchemy==2.0.45
-psycopg2-binary==2.9.11
-redis==7.1.0
-
-# Data Processing
-pandas==2.3.3
+multidict==6.7.0
 numpy==2.4.0
-
-# Testing & Quality
+packaging==25.0
+pandas==2.3.3
+pluggy==1.6.0
+propcache==0.4.1
+psycopg2-binary==2.9.11
+pydantic==2.12.5
+pydantic-core==2.41.5
+pygments==2.19.2
+pymongo==4.15.5
 pytest==9.0.2
 pytest-asyncio==1.3.0
-testcontainers==4.13.3
-httpx==0.28.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pytz==2025.2
+redis==7.1.0
+requests==2.32.5
 ruff==0.14.10
+six==1.17.0
+sqlalchemy==2.0.45
+starlette==0.50.0
+testcontainers==4.13.3
+tqdm==4.67.1
+typing-extensions==4.15.0
+typing-inspection==0.4.2
+tzdata==2025.3
+tzlocal==5.3.1
+urllib3==2.6.2
+uvicorn==0.40.0
+wrapt==2.0.1
+prometheus-fastapi-instrumentator==7.0.0
+slowapi==0.1.9
+python-json-logger==2.0.7
